Incorrect vertex color data reading in imported alembic #51534

Closed
opened 2017-05-17 14:16:10 +02:00 by Yegor · 6 comments

System Information
CentOS, Nvidia GTX Titan

Blender Version
Broken: any recent version

Short description of error
Alembic file was written in Houdini. Maya reads vertex color correctly, but Blender reads it messed up. It's like vertices indexes are messed up, but they are all intact.

Exact steps for others to reproduce the error

  1. Load attached alembic file
  2. Look at the Cf vertex color via rendering or vertex paint mode

It should look like in Maya (diagonal gradient). May be it's some sort of alembic internal parameters written down in file, because when you write down abc file from Blender, then it reads vertex color correctly.
snapshot5.png

snapshot4.png

simple_Cf.abc

**System Information** CentOS, Nvidia GTX Titan **Blender Version** Broken: any recent version **Short description of error** Alembic file was written in Houdini. Maya reads vertex color correctly, but Blender reads it messed up. It's like vertices indexes are messed up, but they are all intact. **Exact steps for others to reproduce the error** 1. Load attached alembic file 2. Look at the Cf vertex color via rendering or vertex paint mode It should look like in Maya (diagonal gradient). May be it's some sort of alembic internal parameters written down in file, because when you write down abc file from Blender, then it reads vertex color correctly. ![snapshot5.png](https://archive.blender.org/developer/F600925/snapshot5.png) ![snapshot4.png](https://archive.blender.org/developer/F600928/snapshot4.png) [simple_Cf.abc](https://archive.blender.org/developer/F600930/simple_Cf.abc)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

Added subscribers: @dr.sybren, @Sergey

Added subscribers: @dr.sybren, @Sergey
Sybren A. Stüvel was assigned by Sergey Sharybin 2017-05-17 14:30:44 +02:00

@dr.sybren, mind having a look here?

@dr.sybren, mind having a look here?

This issue was referenced by 7b25ffb618

This issue was referenced by 7b25ffb618dd7509d425f7a5891c64d4a3668743

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51534
No description provided.